support adding and removing message contracts on a topic
